# pigz-python

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.py  test_compress_decompress.py  tox.ini
.github/workflows/: blank.yml
pigz_python/: __init__.py  pigz_python.py
tests/: lorem_ipsum.txt  test_pigz_python.py
