[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pigz-python"
version = "2.0.0"
description = "A pure Python implementation of the pigz utility."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Ben Guise", email = "bguise135@gmail.com"},
]
maintainers = [
    {name = "Ben Guise", email = "bguise135@gmail.com"},
]
keywords = ["zip", "gzip", "compression"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/bguise987/pigz-python"
Repository = "https://github.com/bguise987/pigz-python"

